Bug 1558095 - Remove useless waitpid from updater. r=rstrong

Differential Revision: https://phabricator.services.mozilla.com/D34503

--HG--
extra : moz-landing-system : lando