toolkit/mozapps/update/updater/updater.cpp
@@ -3018,10 +3018,6 @@ int NS_main(int argc, NS_tchar** argv) {
       }
     }
   }
-#else
-    if (pid > 0) {
-      waitpid(pid, nullptr, 0);
-    }
 #endif
 
 #ifdef XP_WIN
